--- a/stylefile.css
+++ b/stylefile.css
@@ -42,10 +42,11 @@ td{
     border: 1px solid gray;
     align-items: center;
     justify-content: center;
+    width: max-content;
 }
 .table {
     border-collapse: collapse;
-    width: 100%;
+    width: 107%;
     border: 2px solid #c5c4c4; 
 }
 thead {
